# InvenTree

./: pyproject.toml  requirements.txt
config/: config.yaml
src/backend/: requirements.in  requirements.txt
src/backend/InvenTree/: config.yaml
src/config/: config.yaml
